# office-print

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build_wasm.ps1  build_wasm.sh
.github/workflows/: ci.yml  release.yml
contrib/python/: README.md  office_print.py
crates/office-print/: Cargo.toml
crates/office-print-cli/: Cargo.toml
crates/office-print-cli/src/: main.rs  main_tests.rs  metrics.rs  metrics_tests.rs  server.rs  server_tests.rs
crates/office-print/benches/: conversion.rs
crates/office-print/bindings/: ConvertMetrics.ts  ConvertOptions.ts  ConvertWarning.ts  Format.ts  PaperSize.ts  PdfStandard.ts  SlideRange.ts
crates/office-print/examples/: convert_all.rs  custom_options.rs  from_bytes.rs  simple_convert.rs
crates/office-print/src/: config.rs  config_tests.rs  config_ts_tests.rs  defaults.rs  defaults_tests.rs  error.rs  error_tests.rs  error_ts_tests.rs  lib.rs  lib_conversion_tests.rs  lib_pipeline.rs  lib_pipeline_tests.rs  lib_render_tests.rs  lib_robustness_tests.rs  lib_streaming_tests.rs  lib_test_support.rs  lib_ts_integration_tests.rs  pdf_ops.rs  pdf_ops_tests.rs  wasm.rs  wasm_tests.rs
doc/: METHODOLOGY.md  PPTX_FONT_RESOLUTION.md  PRD.md
references/: INDEX.md  allsorts.md  apache-poi.md  charts-rs.md  docx4j.md  docxjs.md  excelize.md  hayro.md  krilla.md  mammoth.md  open-xml-sdk.md  pandoc.md  plotters.md  powerpoint-bulletformat.md  pptxgenjs.md  python-docx.md  python-pptx.md  rustybuzz.md  tex2typst.md  texmath.md  typst.md  verapdf.md
scripts/: download-third-party-fixtures.sh
(+110 files in other folders)
